<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>vn.edu</groupId>
    <artifactId>PatterrnsDemo</artifactId>
    <version>4.0.0</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>26</maven.compiler.source>
        <maven.compiler.target>26</maven.compiler.target>
        <javafx.version>26.0.2</javafx.version>
    </properties>

    <dependencies>

        <!-- JavaFX Controls -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- JavaFX FXML -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <!-- Biên dịch bằng JDK 26 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.16.0</version>

                <configuration>
                    <release>26</release>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <!-- Chạy JavaFX và tạo Custom Runtime -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>

                <configuration>

                    <!-- Cú pháp: module/class chính -->
                    <mainClass>
                        vn.edu.patterrnsdemo/vn.edu.patterrnsdemo.App
                    </mainClass>

                    <!-- Tên file chạy -->
                    <launcher>ECateringPatternLab</launcher>

                    <!-- Thư mục runtime được tạo trong target -->
                    <jlinkImageName>ECateringRuntime</jlinkImageName>

                    <!-- Tạo thêm ZIP của runtime -->
                    <jlinkZipName>ECateringRuntime</jlinkZipName>

                    <!-- Giảm dung lượng runtime -->
                    <stripDebug>true</stripDebug>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>

                    <!-- Loại bỏ cảnh báo native access -->
                    <options>
                        <option>--enable-native-access=javafx.graphics</option>
                    </options>

                </configuration>
            </plugin>

        </plugins>
    </build>

</project>